# Option-Chain-OrderBook

./: .gitignore  Cargo.toml  Makefile  README.md  README.tpl
.github/workflows/: build.yml  code_coverage.yml  format_check.yml  lint.yml  semver.yml  tests.yml
benches/: greeks_bench.rs  hedging_bench.rs  inventory_bench.rs  manager_bench.rs  mod.rs  orderbook_bench.rs  risk_bench.rs  spread_bench.rs  workflows_bench.rs
examples/: 01_option_orderbook.rs  03_chain_orderbook.rs  04_expiration_orderbook.rs  05_underlying_orderbook.rs  06_full_hierarchy.rs
src/: error.rs  lib.rs
src/adapters/: mod.rs  traits.rs
src/chain/: contract.rs  expiration.rs  manager.rs  mod.rs  strike.rs
src/hedging/: hedger.rs  mod.rs  order.rs  params.rs
src/inventory/: limits.rs  manager.rs  mod.rs  position.rs
src/market_data/: handler.rs  mod.rs  types.rs
src/orderbook/: book.rs  manager.rs  mod.rs  quote.rs
src/pnl/: attribution.rs  calculator.rs  mod.rs
src/pricing/: greeks.rs  mod.rs  params.rs  theo.rs
src/quoting/: generated.rs  mod.rs  params.rs  spread.rs
src/risk/: controller.rs  limits.rs  mod.rs
