[package]
name = "option-chain-orderbook"
version = "0.2.0"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "A high-performance Rust library for options market making infrastructure, providing a complete Option Chain Order Book system built on top of OrderBook-rs, PriceLevel, and OptionStratLib."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/Option-Chain-OrderBook.git"
homepage = "https://github.com/joaquinbejar/Option-Chain-OrderBook.git"
keywords = ["options", "market-making", "orderbook", "trading", "finance"]
categories = ["finance", "algorithms"]
include = [
    "benches/**/*",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "examples/**/*.rs",
    "tests/**/*.rs",
    "Makefile",
    "rust-toolchain.toml",
]

[dependencies]
# Core dependencies from workspace
optionstratlib = { workspace = true }
orderbook-rs = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
crossbeam-skiplist = { workspace = true }

[features]
default = []

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["html_reports"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[test]]
name = "tests"
path = "tests/unit/mod.rs"

[[bench]]
name = "benches"
path = "benches/mod.rs"
harness = false

[lib]
name = "option_chain_orderbook"
path = "src/lib.rs"
crate-type = ["rlib"]

[workspace.dependencies]
optionstratlib = { version = "0.14", default-features = false }
orderbook-rs = "0.4"
tracing = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = { version = "1.39", features = ["serde-with-float", "maths"] }
rust_decimal_macros = "1.39"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
crossbeam-skiplist = "0.1"